# PeekingDuck

./: .gitignore  .pylintrc  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  __main__.py  calibrate_camera.py  camera_calibration_pipeline.yml  check_links.py  cicd_requirements.txt  lint_requirements.txt  main.py  pipeline_config.yml  prototype_run.md  prototype_run.py  pyproject.toml  requirements.txt  requirements_cicd.txt  requirements_lint.txt  run_config.yml  setup.cfg  setup.py  sphinx_requirements.txt  test_node.py  test_runner.py
.devcontainer/: devcontainer.json
.github/workflows/: assign_issue_to_project.yml  code_check.yml  daily_drift_checks.yml  linter.yml  mlmodel_tests.yml  post_merge_checks.yml  pre_merge_ci.yml  publish_pypi.yml  publish_skip_testpypi.yml  pylint.yml  python-package.yml  standup_bot.yml  superlinter.yml  system_tests.yml  test_tag_ver.yml  unit_tests.yml  weekly_system_test.yml
converters/pytorch_to_onnx/: convert_yolox_to_onnx.py
converters/tensorflow_to_trt/: convert_movenet_to_trt.py
custom_nodes/draw/: fps.py
data/cifar10/: train.csv
data/vegfru/: train.csv  vegfru10.csv  vegfru15.csv  vegfru20.csv  vegfru5.csv
docs/: Makefile  conf.py  guide_building_blocks.md  guide_custom_nodes.md  input_output.md  io_draw_nodes.md  io_nodes.md  make.bat  node_data.md  node_data_glossary.md  node_data_mapping.md  node_glossary.md  node_yolo.md  node_yolo_glossary.md
docs/_templates/: class.rst  module.rst
docs/models/: efficientdet.md  posenet.md  yolo.md
docs/source/: conf.py  data_type.rst  faq.rst  glossary.rst  index.md  index.rst  io_draw_nodes.md  master.rst  node_glossary.md
docs/use_cases/: group_size_checking.md  object_counting.md  social_distancing.md  zone_analytics.md  zone_counting.md  zoning.md
notebooks/: calling_peekingduck_in_python.ipynb  demo_import_peekingduck.ipynb
peekingduck/: __init__.py  altrunner.py  cli.py  config.py  config_loader.py  configloader.py  declarative_loader.py  hello.py  loaders.py  mp_runner.py  optional_requirements.txt  pipeline.py  placeholder.py  runner.py
peekingduck/commands/: __init__.py  base.py  core.py  create_node.py  create_node_helper.py  nodes.py
peekingduck/configs/: input_live.yml  input_recorded.yml  model_efficientdet_node.yml  model_yolo_node.yml  node_template.yml  nodes_config.yml  output_mediawriter.yml  usecase_peoplecounting.yml
peekingduck/nodes/: abstract_node.py  base.py  callback_list.py  node.py  node_template.py
peekingduck/pipeline/: __init__.py  node.py  pipe.py  pipeline.py
peekingduck/placeholder/: placeholder2.py
peekingduck/server/: __init__.py  server.py
peekingduck/training/: .gitignore  .pylintrc  README.md  main.py  requirements.txt  requirements_mac.txt  requirements_mac.yaml  rsna.ipynb
peekingduck/utils/: __init__.py  abstract_class_attributes.py  create_node_helper.py  deprecation.py  detect_id_mapper.py  graph_functions.py  lazy_module.py  logger.py  mapping_efficientdet.txt  mapping_efficientdet.yml  mapping_yolo.txt  mapping_yolo.yml  requirement_checker.py
peekingduck/viewer/: __init__.py  canvas_view.py  playlist.py  single_column_view.py  viewer.py  viewer_gui.py  viewer_utils.py
peekingduck/weights_utils/: __init__.py  checker.py  downloader.py  finder.py
scripts/: bandit.sh  check_format.sh  check_headers.sh  check_hinting.sh  check_license.sh  check_links.py  check_type.sh  evaluate_pylint.sh  install_macos.sh  linter.sh  make_new_conda_macos.sh  mlmodel_tests.sh  run_tests.sh  send.py  trigger_standupbot.sh  unit_tests.sh  update_version.sh  usecase_tests.sh  webhook_issues.py
scripts/benchmarks/: readme.txt  run_benchmarks.sh  run_multipose_lightning.yml  run_singlepose_lightning.yml  run_singlepose_thunder.yml  run_yolox_large_multi.yml  run_yolox_large_single.yml  run_yolox_medium_multi.yml  run_yolox_medium_single.yml  run_yolox_small_multi.yml  run_yolox_small_single.yml  run_yolox_tiny_multi.yml  run_yolox_tiny_single.yml
scripts/clients/: post.py  publish.py  publish_exchange.py  publish_queue.py  send.py
scripts/converters/: compute_weights_checksum.py
src/: main.py
tests/: conftest.py  test_cli.py  test_cli_config.yml  test_pipeline.py
use_cases/: crowd_counting.yml  face_mask_detection.yml  group_size_checking.yml  human_tracking.yml  object_counting.yml  object_counting_over_time.yml  object_counting_present.yml  object_tracking.yml  people_counting_over_time.yml  person_reid.yml  privacy_license_plate.yml  privacy_protection_faces.yml  privacy_protection_license_plates.yml  privacy_protection_people_screens.yml  setting_bbox_color.yml  social_distancing.yml  zone_count.yml  zone_counting.yml
(+1231 files in other folders)
