[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "module: marks test for python import peekingduck tests",
    "mlmodel: marks tests as (slow) ml models (deselect with '-m \"not mlmodel\"')",
]

[tool.pylint]
    [tool.pylint.'MESSAGES CONTROL']
    disable = [
        "access-member-before-definition",
        "attribute-defined-outside-init",
        "duplicate-code",
        "logging-fstring-interpolation",
        "no-member",
    ]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disable_error_code = ['override', 'attr-defined']
