[metadata]
name = PeekingDuck-test
version = 0.0.1
description = A simple tool for Computer Vision Inference
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    pyyaml == 5.2
    pytest == 6.2.3
    pylint >= 2.7.4
    click == 7.1.2
include_package_data = True

# Optional Requirements that can be configured how pip behaves in circumstances
# For edge devices?
# [options.extras_require]
[options.package_data]
* = configs/*/*.yml

[options.packages.find]
include = peekingduck, peekingduck.*

[options.entry_points]
console_scripts =
    peekingduck = peekingduck.cli:cli