[metadata]
name = peekingduck
version = attr: peekingduck.__version__
url = https://github.com/aimakerspace/PeekingDuck
author = 'AI Singapore'
author_email = cvhub-ext@aisingapore.org
keywords = 'peekingduck', 'computer vision', 'inference', 'edge'
description = A modular framework built to simplify Computer Vision inference workloads.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.6, <3.10
install_requires =
    pyyaml >= 5.3
    click == 7.1.2
    requests == 2.24
    opencv-contrib-python >= 4.5.2.54
    protobuf <= 3.20.1
    tensorflow >= 2.2, <2.8
    numpy >= 1.17.3
    tqdm == 4.45.0
    colorama == 0.4.4
    torch == 1.10.0
    torchvision == 0.11.1
    scipy >= 1.4.1
include_package_data = True

# Optional Requirements that can be configured how pip behaves in circumstances
# TBD: Different extras for `full` and `edge`
# [options.extras_require]

[options.package_data]
* =
    configs/*/*.yml
    configs/node_template.yml
    pipeline/nodes/model/master_map.yml
    optional_requirements.txt

[options.packages.find]
include = peekingduck, peekingduck.*

[options.entry_points]
console_scripts =
    peekingduck = peekingduck.cli:cli
